# volo-mini-redis

./: .gitignore  Cargo.toml  README.md  clear.sh  cluster.toml  del.sh  get.sh  master_slave_test.sh  set.sh  simple_transaction.sh  start_main_server.sh  start_slave_server.sh  test1.sh  transaction_with_watch.sh
idl/: volo_redis.thrift
src/: cmdargs.rs  lib.rs  redis.rs
volo-gen/: volo.yml
