[package]
name = "mini_redis"
version = "0.1.0"
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
volo-gen = { path = "./volo-gen" }
lazy_static = "1"
tracing = "0.1"
shell-words = "0.1"
tracing-subscriber = "0.3"
colored = "2.0"
rustyline = "8"
rmp-serde = "1"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
tokio = { workspace = true, features = ["full"] }

volo.workspace = true
volo-thrift.workspace = true
pilota.workspace = true

anyhow.workspace = true
async-trait.workspace = true
parking_lot = "0.12.1"
async-std = "1.12.0"
clap = { version = "4.4.3", features = ["derive", "cargo"] }

[profile.release]
opt-level = 3
debug = true
debug-assertions = false
overflow-checks = false
lto = true
panic = 'unwind'
incremental = false
codegen-units = 1
rpath = false

[workspace]
members = ["volo-gen"]
resolver = "2"

[workspace.package]
edition = "2021"

[workspace.dependencies]
# we recommend to use the latest framework version for new features and bug fixes
volo = "*"
volo-build = "*"
volo-thrift = "*"
pilota = "*"

anyhow = "1"
async-trait = "0.1"
tokio = "1"
